--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   app:
     build:
@@ -8,7 +6,7 @@ services:
     image: tamilnadu_backend_app:latest
     container_name: tamilnadu_backend_app
     env_file:
-      - ./.env
+      - ./.env.docker
     depends_on:
       - broker
     volumes:
@@ -16,6 +14,8 @@ services:
       - ./backend/uploads:/usr/src/app/backend/uploads
     networks:
       - backend_network
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     restart: unless-stopped
 
   worker:
@@ -25,7 +25,7 @@ services:
     image: tamilnadu_backend_worker:latest
     container_name: tamilnadu_backend_worker
     env_file:
-      - ./.env
+      - ./.env.docker
     command: >
       celery -A inzighted --workdir /usr/src/app/backend worker -l info --concurrency=2
     depends_on:
@@ -36,6 +36,8 @@ services:
       - ./backend/uploads:/usr/src/app/backend/uploads
     networks:
       - backend_network
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     restart: unless-stopped
 
   nginx:
@@ -43,12 +45,14 @@ services:
     container_name: tamilnadu_nginx
     ports:
       - "80:80"
+      - "443:443"
     depends_on:
       - app
     volumes:
       - static_data:/usr/src/app/static_root:ro
       - ./backend/uploads:/usr/src/app/backend/uploads:ro
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./ssl:/etc/nginx/ssl:ro
     networks:
       - backend_network
     restart: unless-stopped
