--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,9 +6,36 @@ upstream django_app {
     server app:8000;
 }
 
+# HTTP server - redirect to HTTPS
 server {
     listen 80;
-    server_name _;
+    server_name tamilnaduapi.inzighted.com;
+
+    # Redirect all HTTP traffic to HTTPS
+    return 301 https://$server_name$request_uri;
+}
+
+# HTTPS server
+server {
+    listen 443 ssl http2;
+    server_name tamilnaduapi.inzighted.com;
+
+    # SSL certificate configuration
+    ssl_certificate /etc/nginx/ssl/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+
+    # SSL configuration for security
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
+
+    # Security headers
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
 
     # Increase client body size for large file uploads
     client_max_body_size 100M;
