--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,38 +1,17 @@
 # nginx/nginx.conf
-# Reverse proxy for Gunicorn Django app and static file server
+# Pure HTTP reverse proxy for Gunicorn Django app (behind ALB with ACM)
 
 upstream django_app {
     # app service and the port Gunicorn binds to inside the container
     server app:8000;
 }
 
-# HTTP server - redirect to HTTPS
+# HTTP server - ALB/ACM handles SSL termination
 server {
     listen 80;
     server_name tamilnaduapi.inzighted.com;
 
-    # Redirect all HTTP traffic to HTTPS
-    return 301 https://$server_name$request_uri;
-}
-
-# HTTPS server
-server {
-    listen 443 ssl http2;
-    server_name tamilnaduapi.inzighted.com;
-
-    # SSL certificate configuration
-    ssl_certificate /etc/nginx/ssl/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/privkey.pem;
-
-    # SSL configuration for security
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
-    ssl_prefer_server_ciphers on;
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 10m;
-
     # Security headers
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
@@ -61,7 +40,7 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
 
         proxy_http_version 1.1;
         proxy_set_header Connection "";
