--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,6 +6,11 @@ upstream django_app {
     server app:8000;
 }
 
+upstream pdf_service {
+    # pdf_service and the port it binds to
+    server pdf_service:8080;
+}
+
 # HTTP server - ALB/ACM handles SSL termination
 server {
     listen 80;
@@ -33,6 +38,27 @@ server {
         expires 30d;
         add_header Cache-Control "public";
         try_files $uri $uri/ =404;
+    }
+
+    # Proxy PDF service requests
+    location /pdf/ {
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
+        proxy_set_header Origin $http_origin;
+
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
+
+        # Remove /pdf prefix when forwarding
+        rewrite ^/pdf/(.*) /$1 break;
+        proxy_pass http://pdf_service;
+        
+        # Extended timeouts for PDF generation
+        proxy_read_timeout 180s;
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 180s;
     }
 
     # Proxy pass all other requests to the Gunicorn upstream
