--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,2 @@
 VITE_API_URL=https://tamilnaduapi.inzighted.com/api
-VITE_PDF_SERVICE_URL=https://pdf.inzighted.com
+VITE_PDF_SERVICE_URL=https://tamilnaduapi.inzighted.com/pdf
