--- a/pdf_service/.env.example
+++ b/pdf_service/.env.example
@@ -20,3 +20,13 @@ CHROME_ARGS=--no-sandbox,--disable-setuid-sandbox,--disable-dev-shm-usage
 # Logging Configuration
 LOG_LEVEL=debug
 LOG_FILE=./logs/app.log
+
+# AWS S3 Configuration (optional - set AWS_S3_UPLOAD_ENABLED=false to disable)
+AWS_ACCESS_KEY_ID=your_aws_access_key_id
+AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key
+AWS_STORAGE_BUCKET_NAME=your-s3-bucket-name
+AWS_REGION=ap-southeast-1
+AWS_S3_UPLOAD_ENABLED=true
+
+# Internal Service Authentication
+PDF_SERVICE_INTERNAL_TOKEN=changeme-internal-token-secure-random-string
