updated env file frontend for production

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-VITE_API_URL=https://tamilnaduapi.inzighted.com/api
-VITE_PDF_SERVICE_URL=https://tamilnaduapi.inzighted.com/pdf
+VITE_API_URL=https://api.inzighted.com/api
+VITE_PDF_SERVICE_URL=https://api.inzighted.com/pdf
