updated yml and removed unneccessary files

--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -2,7 +2,7 @@ name: 🚀 Deploy Frontend to S3 + Invalidate CloudFront
 
 on:
   push:
-    branches: [front_end]  # ✅ Set this to your deployment branch
+    branches: [main]  # ✅ Set this to your deployment branch
 
 jobs:
   deploy:
