--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,7 +14,7 @@ upstream pdf_service {
 # HTTP server - ALB/ACM handles SSL termination
 server {
     listen 80;
-    server_name tamilnaduapi.inzighted.com;
+    server_name ${NGINX_SERVER_NAME};
 
     # Security headers
     add_header X-Frame-Options "SAMEORIGIN" always;
