--- a/pdf_service/.env.example
+++ b/pdf_service/.env.example
@@ -30,3 +30,5 @@ AWS_S3_UPLOAD_ENABLED=true
 
 # Internal Service Authentication
 PDF_SERVICE_INTERNAL_TOKEN=changeme-internal-token-secure-random-string
+# Tenant defaults
+PDF_TENANTS_DEFAULT_ORIGIN=https://tamilnadu.inzighted.com
