--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -55,10 +55,19 @@ server {
         rewrite ^/pdf/(.*) /$1 break;
         proxy_pass http://pdf_service;
         
-        # Extended timeouts for PDF generation
-        proxy_read_timeout 180s;
+        # Extended timeouts for PDF generation and large file transfers
+        proxy_read_timeout 300s;
         proxy_connect_timeout 60s;
-        proxy_send_timeout 180s;
+        proxy_send_timeout 300s;
+        
+        # Disable buffering for large file streaming
+        proxy_buffering off;
+        proxy_request_buffering off;
+        
+        # Increase buffer sizes for large responses
+        proxy_buffer_size 128k;
+        proxy_buffers 8 128k;
+        proxy_busy_buffers_size 256k;
     }
 
     # Proxy pass all other requests to the Gunicorn upstream
