--- a/pdf_service/package.json
+++ b/pdf_service/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.682.0",
+    "@aws-sdk/s3-request-presigner": "^3.682.0",
     "archiver": "^7.0.1",
     "axios": "^1.10.0",
     "cors": "^2.8.5",
