--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
 VITE_API_URL=https://api.inzighted.com/api
-VITE_PDF_SERVICE_URL=https://api.inzighted.com/pdf
+VITE_PDF_SERVICE_URL=https://pdf.inzighted.com/pdf
