upadted pdf server

--- a/.github/workflows/deploy-frontent-dev-server.yml
+++ b/.github/workflows/deploy-frontent-dev-server.yml
@@ -30,7 +30,7 @@ jobs:
       run: npm run build
       env:
         VITE_API_URL: https://tamilnaduapi.inzighted.com/api
-        VITE_PDF_SERVICE_URL: https://tamilnadupdf.inzighted.com/pdf
+        VITE_PDF_SERVICE_URL: https://tamilnaduapi.inzighted.com/pdf
 
     - name: 🚀 Sync to S3
       run: aws s3 sync ./dist s3://${{ secrets.S3_BUCKET_NAME_DEV }} --delete
