--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -27,7 +27,7 @@ jobs:
       run: npm run build
       env:
         VITE_API_URL: "https://api.inzighted.com/api"
-        VITE_PDF_SERVICE_URL: "https://pdf.inzighted.com/pdf"
+        VITE_PDF_SERVICE_URL: "https://api.inzighted.com/pdf"
 
     - name: 🚀 Sync to S3
       run: aws s3 sync ./dist s3://${{ secrets.S3_BUCKET_NAME }} --delete
