--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,28 @@
+# Backend API base URL
 VITE_API_URL=https://api.inzighted.com/api
+
+# PDF service URL (for report generation)
 VITE_PDF_SERVICE_URL=https://pdf.inzighted.com/pdf
+
+# ============================================================================
+# Multi-Tenant Subdomain Redirect (Production Only)
+# ============================================================================
+# The frontend automatically redirects users from web.inzighted.com to their
+# institute's subdomain (e.g., rgracademy.inzighted.com) after successful login.
+#
+# BACKEND REQUIREMENT:
+# All login endpoints (/admin/login/, /educator/login/, /institution/login/, 
+# /student/login/) must include the following field in their response:
+#
+#   {
+#     "token": "...",
+#     "institute_subdomain": "rgracademy"  // <-- Add this field
+#     // ... other fields
+#   }
+#
+# BEHAVIOR:
+# - Redirect ONLY triggers on hostname exactly matching "web.inzighted.com"
+# - Development (tamilnadu.inzighted.com) is NEVER affected
+# - If institute_subdomain is missing/null, no redirect happens (safe fallback)
+# - Tokens are persisted in localStorage before redirect
+# ============================================================================
