--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -10,6 +10,16 @@ VITE_PDF_SERVICE_URL=https://pdf.inzighted.com/pdf
 # The frontend automatically redirects users from web.inzighted.com to their
 # institute's subdomain (e.g., rgracademy.inzighted.com) after successful login.
 #
+# ENVIRONMENT DETECTION (Dual-Signal):
+# Redirect triggers ONLY when BOTH conditions are true:
+#   1. Frontend hostname === "web.inzighted.com"
+#   2. VITE_API_URL === "https://api.inzighted.com/api" (production API)
+#
+# This ensures:
+#   ✅ Dev (tamilnadu.inzighted.com + tamilnaduapi) NEVER redirects
+#   ✅ Prod (web.inzighted.com + api) DOES redirect
+#   ✅ Cannot rely on import.meta.env.MODE (always "production" for all builds)
+#
 # BACKEND REQUIREMENT:
 # All login endpoints (/admin/login/, /educator/login/, /institution/login/, 
 # /student/login/) must include the following field in their response:
@@ -21,8 +31,8 @@ VITE_PDF_SERVICE_URL=https://pdf.inzighted.com/pdf
 #   }
 #
 # BEHAVIOR:
-# - Redirect ONLY triggers on hostname exactly matching "web.inzighted.com"
-# - Development (tamilnadu.inzighted.com) is NEVER affected
 # - If institute_subdomain is missing/null, no redirect happens (safe fallback)
 # - Tokens are persisted in localStorage before redirect
+# - Full URL context preserved (pathname, query params, hash)
+# - Infinite loops prevented by hostname check
 # ============================================================================
