--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,38 @@
+# Backend API base URL
 VITE_API_URL=https://api.inzighted.com/api
+
+# PDF service URL (for report generation)
 VITE_PDF_SERVICE_URL=https://pdf.inzighted.com/pdf
+
+# ============================================================================
+# Multi-Tenant Subdomain Redirect (Production Only)
+# ============================================================================
+# The frontend automatically redirects users from web.inzighted.com to their
+# institute's subdomain (e.g., rgracademy.inzighted.com) after successful login.
+#
+# ENVIRONMENT DETECTION (Dual-Signal):
+# Redirect triggers ONLY when BOTH conditions are true:
+#   1. Frontend hostname === "web.inzighted.com"
+#   2. VITE_API_URL === "https://api.inzighted.com/api" (production API)
+#
+# This ensures:
+#   ✅ Dev (tamilnadu.inzighted.com + tamilnaduapi) NEVER redirects
+#   ✅ Prod (web.inzighted.com + api) DOES redirect
+#   ✅ Cannot rely on import.meta.env.MODE (always "production" for all builds)
+#
+# BACKEND REQUIREMENT:
+# All login endpoints (/admin/login/, /educator/login/, /institution/login/, 
+# /student/login/) must include the following field in their response:
+#
+#   {
+#     "token": "...",
+#     "institute_subdomain": "rgracademy"  // <-- Add this field
+#     // ... other fields
+#   }
+#
+# BEHAVIOR:
+# - If institute_subdomain is missing/null, no redirect happens (safe fallback)
+# - Tokens are persisted in localStorage before redirect
+# - Full URL context preserved (pathname, query params, hash)
+# - Infinite loops prevented by hostname check
+# ============================================================================
