--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,8 +1,8 @@
 # Backend API base URL
-VITE_API_URL=https://api.inzighted.com/api
+VITE_API_URL=https://web.inzighted.com/api
 
 # PDF service URL (for report generation)
-VITE_PDF_SERVICE_URL=https://pdf.inzighted.com/pdf
+VITE_PDF_SERVICE_URL=https://web.inzighted.com/pdf
 
 # ============================================================================
 # Multi-Tenant Subdomain Redirect (Production Only)
